Tata galeri secara vertikal dan rapi

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     }
 
     .gallery img {
-      max-width: 90%;
+      width: 100%;
+      max-width: 600px;
       height: auto;
       border-radius: 12px;
       transition: transform 0.3s;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
 
     .gallery img:hover {
