Tata galeri secara vertikal dan rapi

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       transition: transform 0.3s;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
+    .gallery figcaption {
+      margin-top: 10px;
+      font-size: 1rem;
+      color: #555;
+    }
 
     .gallery img:hover {
       transform: scale(1.02);
@@ -38,7 +43,7 @@
   </style>
 </head>
 <body>
-  <h1>Galeri Lukisan Saya</h1>
+  <h1>Galeri Lukisan Gue</h1>
   <div class="gallery">
     <div class="item"><img src="img/Karya1.png" alt="Karya 1"></div>
     <div class="item"><img src="img/Karya2.jpg" alt="Karya 2"></div>
