--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
   <h1>Galeri Lukisan Gue</h1>
   <div class="gallery">
    <figure>
-    <div class="item"><img src="img/Karya1.png" alt="Karya 1"></div>
+    <div class=".gallery"><img src="img/Karya1.png" alt="Karya 1"></div>
     <figcaption>12 Maret 2025</figcaption>
    </figure>
    <figure>
-    <div class="item"><img src="img/Karya2.jpg" alt="Karya 2"></div>
+    <div class=".gallery"><img src="img/Karya2.jpg" alt="Karya 2"></div>
     <figcaption>12 Februari 2025</figcaption>
    </figure>
    <figure>
-    <div class="item"><img src="img/Karya3.jpg" alt="Karya 3"></div>
+    <div class=".gallery"><img src="img/Karya3.jpg" alt="Karya 3"></div>
     <figcaption>23 Desember 2023</figcaption>
    </figure>
    <figure>
-    <div class="item"><img src="img/Karya4.png" alt="Karya 4"></div>
+    <div class=".gallery"><img src="img/Karya4.png" alt="Karya 4"></div>
     <figcaption>25 Januari 2025</figcaption>
     </figure>
   </div>
