--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Lukisan Gue</title>
   <style>
     body {
+      margin: 0;
       font-family:'Poppins', sans-serif;
       text-align: center;
       background-color: #f3f3f3;
@@ -46,19 +47,19 @@
   <h1>Galeri Lukisan Gue</h1>
   <div class="gallery">
    <figure>
-    <div class=".gallery"><img src="img/Karya1.png" alt="Karya 1"></div>
+    <img src="img/Karya1.png" alt="Karya 1">
     <figcaption>12 Maret 2025</figcaption>
    </figure>
    <figure>
-    <div class=".gallery"><img src="img/Karya2.jpg" alt="Karya 2"></div>
+    <img src="img/Karya2.jpg" alt="Karya 2">
     <figcaption>12 Februari 2025</figcaption>
    </figure>
    <figure>
-    <div class=".gallery"><img src="img/Karya3.jpg" alt="Karya 3"></div>
+    <img src="img/Karya3.jpg" alt="Karya 3">
     <figcaption>23 Desember 2023</figcaption>
    </figure>
    <figure>
-    <div class=".gallery"><img src="img/Karya4.png" alt="Karya 4"></div>
+    <img src="img/Karya4.png" alt="Karya 4">
     <figcaption>25 Januari 2025</figcaption>
     </figure>
   </div>
