--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="id">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <title>Lukisan Gue</title>
   <style>
     body {
       margin: 0;
-      font-family:'Poppins', sans-serif;
+      font-family:'Poppins';
       text-align: center;
       background-color: #f3f3f3;
       padding: 20px;
@@ -36,6 +37,7 @@
       margin-top: 10px;
       font-size: 1rem;
       color: #555;
+      font-family: 'Playfair Display';
     }
 
     .gallery img:hover {
@@ -45,7 +47,7 @@
 </head>
 <body>
   <h1>Galeri Lukisan Gue</h1>
-  
+
   <div class="gallery">
    <figure>
     <img src="img/Karya1.png" alt="Karya 1">
